--- a/landingpage/templates/landingpage/partials/history_card.html
+++ b/landingpage/templates/landingpage/partials/history_card.html
@@ -4,7 +4,7 @@
 
     <div class="card__img d-flex">
 
-        <div class="gey__background history__herbs__container w-50 d-flex flex-column justify-content-center">
+        <div class="grey__background history__herbs__container w-50 d-flex flex-column justify-content-center">
 
             <div class="club__herb w-100 h-25 mt-3">
                 <div class="herb__container text-center position-relative">
@@ -26,7 +26,7 @@
 
             <div class="dest__club__herb w-100 d-flex justify-content-center">
                 <div class="herb__container text-center position-relative">
-                    <img class="white__background border__rounded" src="{% static dest_herb %}" alt="">
+                    <img class="white__background" src="{% static dest_herb %}" alt="">
                     <div class="vector__herb__dest"></div>
                 </div>
             </div>
