--- a/landingpage/templates/landingpage/first_section.html
+++ b/landingpage/templates/landingpage/first_section.html
@@ -17,14 +17,14 @@
     <section class="landingpage__main_photo dark__background d-flex align-items-center">
         <div class="container h-100">
           <div class="row">
-            <div class="landingpage__section col-xl-6 p-4 d-flex flex-column flex-xl-row-reverse justify-content-center w-100">
+            <div class="landingpage__section my-3 col-xl-6 p-4 d-flex flex-column flex-xl-row-reverse justify-content-center w-100">
                 <img src="{% static 'assets/img/landingpage/pilka_out.png' %}"
                      class="w-100"
                      alt="Player standing infront of stadium"
                 >
                 <div class="">
 
-                    <div class="my-5">
+                    <div class="">
                         <h1 class="mb-3">Weź udział w teście piłkarskim </h1>
                         <p>Planujesz zmianę klubu w letnim oknie transferowym 2022?
                             Znajdziemy klub, w którym będziesz mógł się sprawdzić.</p>
@@ -77,13 +77,13 @@
 
 {#    <div class="text-center" style="position:relative; top:-15px;  z-index:666;height:26px; background-color:#fff;transform: skewY(-2.1deg);"></div>#}
 
-    <section class="p-0 position-sticky sticky__menu white__background">
+    <section class="position-sticky sticky__menu white__background">
         <div class="container">
 
             <div class="second__navbar_fixed d-flex justify-content-between align-items-start mx-3">
                 <a href="#history__section"><p class="active__border">Historie</p></a>
                 <a href="#how_it_works"><p>jak to działa?</p></a>
-                <a href="#price__section"><p>Cenik</p></a>
+                <a href="#price__section"><p>Cennik</p></a>
                 <a href="#test__section"><p>Formularz</p></a>
                 <a href="#faq__section"><p>FAQ</p></a>
             </div>
