--- a/landingpage/templates/landingpage/history_carousel.html
+++ b/landingpage/templates/landingpage/history_carousel.html
@@ -10,15 +10,15 @@
 
         <!-- Full-width images with number and caption text -->
 
-        {% with club_name='Spartakus Deleszyce' player_name='Patryk Raczyński' league='4 liga' player='Lewy obrońca / skrzydłowy' content='landingpage/partials/history/history_first.html' club_herb='assets/img/landingpage/history/spartakus.png' dest_name='Neptun Końskie' dest_herb='assets/img/landingpage/history/neptun.png' dest_league='4 liga' player_url='https://www.playmaker.pro/users/player-patryk-raczynski/' player_photo='assets/img/landingpage/history/patryk_raczynski.jpg' %}
+        {% with club_name='Spartakus Daleszyce' player_name='Patryk Raczyński' league='4 liga' player='Lewy obrońca / skrzydłowy' content='landingpage/partials/history/history_first.html' club_herb='assets/img/landingpage/history/spartakus.png' dest_name='Neptun Końskie' dest_herb='assets/img/landingpage/history/neptun.png' dest_league='4 liga' player_url='https://www.playmaker.pro/users/player-patryk-raczynski/' player_photo='assets/img/landingpage/history/patryk_raczynski.jpg' %}
             {% include 'landingpage/partials/history_card.html' %}
         {% endwith %}
 
-        {% with club_name='Spartakus Deleszyce' player_name='Sebastian Jaroszyński' league='3 liga' player='Napastnik' content='landingpage/partials/history/history_second.html' club_herb='assets/img/landingpage/history/foto-higiena-gac.png' dest_name='Polonia Świdnica' dest_herb='assets/img/landingpage/history/polonia_sparta_swidnica.jpg' dest_league='3 liga' player_url='https://www.playmaker.pro/users/player-sebastian-jaroszynski/' player_photo='assets/img/landingpage/history/sebastian1.jpg' %}
+        {% with club_name='Foto-Higiena Gać' player_name='Sebastian Jaroszyński' league='3 liga' player='Napastnik' content='landingpage/partials/history/history_second.html' club_herb='assets/img/landingpage/history/foto-higiena-gac.png' dest_name='Polonia Świdnica' dest_herb='assets/img/landingpage/history/polonia_sparta_swidnica.jpg' dest_league='3 liga' player_url='https://www.playmaker.pro/users/player-sebastian-jaroszynski/' player_photo='assets/img/landingpage/history/sebastian1.jpg' %}
             {% include 'landingpage/partials/history_card.html' %}
         {% endwith %}
 
-        {% with club_name='Spartakus Deleszyce' player_name='Grzegorz Kleemann' league='3 liga' player='Bramkarz' content='landingpage/partials/history/history_third.html' club_herb='assets/img/landingpage/history/yeclano-deportivo.png' dest_name='Kotwica Kołobrzeg' dest_herb='assets/img/landingpage/history/Kotwica Kolobrzeg.jpg' dest_league='3 liga' player_photo='assets/img/landingpage/history/grzegorz_kleemann.jpg'  %}
+        {% with club_name='Yeclano Deportivo' player_name='Grzegorz Kleemann' league='3 liga' player='Bramkarz' content='landingpage/partials/history/history_third.html' club_herb='assets/img/landingpage/history/yeclano-deportivo.png' dest_name='Kotwica Kołobrzeg' dest_herb='assets/img/landingpage/history/Kotwica Kolobrzeg.jpg' dest_league='3 liga' player_url='https://www.transfermarkt.pl/grzegorz-kleemann/profil/spieler/332027' player_photo='assets/img/landingpage/history/grzegorz_kleemann.jpg'  %}
             {% include 'landingpage/partials/history_card.html' %}
         {% endwith %}
 
