--- a/landingpage/templates/landingpage/test_form_section.html
+++ b/landingpage/templates/landingpage/test_form_section.html
@@ -28,7 +28,7 @@
 
         <div class="leagues__form my-4 d-flex flex-column">
             <div class="leagues__first_line mb-2 d-flex w-100">
-                <div class="choose__league league__active"><p>3 liga</p></div>
+                <div class="choose__league"><p>3 liga</p></div>
                 <div class="choose__league"><p>4 liga</p></div>
                 <div class="choose__league"><p>Klasa okręgowa</p></div>
             </div>
