--- a/landingpage/templates/landingpage/partials/history_card.html
+++ b/landingpage/templates/landingpage/partials/history_card.html
@@ -13,6 +13,7 @@
                     <img class="vector__herb__arrow" src="{% static 'assets/img/landingpage/history/arrow.png' %}" alt="">
                 </div>
             </div>
+
             <div class="club__name w-100">
                 <p>{{ club_name }}</p>
             </div>
@@ -24,12 +25,13 @@
 
         <div class="primary__background w-50 history__herbs__container d-flex flex-column justify-content-center">
 
-            <div class="dest__club__herb w-100 d-flex justify-content-center">
+            <div class="club__herb w-100 h-25 mt-3">
                 <div class="herb__container text-center position-relative">
-                    <img class="white__background" src="{% static dest_herb %}" alt="">
+                    <img class="px-1 py-2 white__background border__rounded" src="{% static dest_herb %}" alt="">
                     <div class="vector__herb__dest"></div>
                 </div>
             </div>
+
             <div class="dest__club__name w-100">
                 <p>{{ dest_name }}</p>
             </div>
