--- a/landingpage/templates/landingpage/we_got_it.html
+++ b/landingpage/templates/landingpage/we_got_it.html
@@ -56,7 +56,7 @@
                         {% include 'landingpage/partials/micro_messages.html' %}
                     {% endwith %}
 
-                    <button class="second__form__btn">{% trans 'Wyślij' %}</button>
+                    <button disabled class="second__form__btn">{% trans 'Wyślij' %}</button>
 
                 </form>
 
