Changed urls for landingpage (to "transfer")

--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -106,7 +106,7 @@ onReady(function() {
   {% include 'partials/action_messages.html' %}
 
   {% block header %}
-      {% if 'landingpage' in request.path %}
+      {% if 'transfer' in request.path %}
           {% include 'landingpage/navbar.html' %}
       {% else %}
         {% include 'partials/navbar.html' %}
