fixing windows like traling slashes

--- a/landingpage/templates/landingpage/pricing_section.html
+++ b/landingpage/templates/landingpage/pricing_section.html
@@ -31,13 +31,13 @@
 
     <div class="mt-4 guarantee__grid">
         <div class="guarantee">
-            <img src="{% static 'assets\img\landingpage\guarantee.png' %}" alt="">
+            <img src="{% static 'assets/img/landingpage/guarantee.png' %}" alt="">
             <p class="guarantee__text">
                 100% Gwarancja propozycji udziału w teście piłkarskim. Inaczej zwrot pieniędzy.
             </p>
         </div>
         <div class="danger_ d-flex mt-3">
-            <img src="{% static 'assets\img\landingpage\danger.png' %}" alt="">
+            <img src="{% static 'assets/img/landingpage/danger.png' %}" alt="">
             <p class="danger__text">
                 Płatność odbywa się przez przelew tradycyjny. Zaksięgowanie środków trwa od 12 do 48h.
             </p>
