--- a/soccerbase/templates/soccerbase/tables/filters/filter_vivo_ms.html
+++ b/soccerbase/templates/soccerbase/tables/filters/filter_vivo_ms.html
@@ -6,7 +6,7 @@
         data-selected-text-format="count > 3">
 
 {% for vivo in vivos %}
-    <option {% if vivo.1 in request.GET|get_list:"vivo" %} selected="selected" {% endif %}>{{ vivo.1 }}</option>
+    <option {% if vivo.name in request.GET|get_list:"vivo" %} selected="selected" {% endif %}>{{ vivo.name }}</option>
 {% endfor %}
 
 </select>
