--- a/soccerbase/templates/soccerbase/tables/table_coaches_card.html
+++ b/soccerbase/templates/soccerbase/tables/table_coaches_card.html
@@ -66,10 +66,10 @@
                               <a href="{{ object.profile.team_object.get_league_permalink }}">
                                 {{ object.profile.display_league_top_parent|default:''|title  }}
                               </a>
-                                {% if object.profile.voivodeship %}
-                                    , {{ object.profile.voivodeship|default:''|title|truncatechars:24 }}
-                                {% elif  object.profile.get_team_object %}
-                                     {{ object.profile.get_team_object.club.voivodeship|title|truncatechars:25 }}
+                                {% if object.profile.new_voivodeship %}
+                                    , {{ object.profile.new_voivodeship|default:''|truncatechars:24 }}
+                                {% elif  object.profile.get_team_object.club.new_voivodeship %}
+                                     {{ object.profile.get_team_object.club.new_voivodeship.name|truncatechars:25 }}
                                 {% endif %}
 
                             </div>
@@ -95,10 +95,10 @@
               </a>
             </div >
             <div class="sc-cell d-none d-md-flex col-3 col-md-2 text-left">
-                {% if object.profile.voivodeship %}
-                    {{ object.profile.voivodeship|default:''|title  }}
-                {% elif  object.profile.get_team_object %}
-                     {{ object.profile.get_team_object.club.voivodeship|title|truncatechars:25 }}
+                {% if object.profile.new_voivodeship %}
+                    {{ object.profile.new_voivodeship|default:''  }}
+                {% elif  object.profile.get_team_object.club.new_voivodeship %}
+                     {{ object.profile.get_team_object.club.new_voivodeship.name|truncatechars:25 }}
                 {% endif %}
             </div>
             <div class=" sc-cell d-none d-md-flex col-3 col-md-1 text-left">
