--- a/marketplace/templates/marketplace/announcement_club_for_player.html
+++ b/marketplace/templates/marketplace/announcement_club_for_player.html
@@ -32,7 +32,12 @@
                 </div>
 
                 <div class="col-6 col-md-3 text-center">
-                    <h5>{{ object.voivodeship }}, {{ object.address }}</h5>
+                    <h5>
+                        {% if object.new_voivodeship.name %}
+                            {{ object.new_voivodeship.name }},
+                        {% endif %}
+                        {{ object.address }}
+                    </h5>
                     Region
                 </div>
                 <div class="card-text col-md-12">
