--- a/marketplace/templates/marketplace/announcement_coach_for_club.html
+++ b/marketplace/templates/marketplace/announcement_coach_for_club.html
@@ -28,7 +28,12 @@
                 </div>
 
                 <div class="col-6 col-md-3 text-center">
-                    <h5> {{ object.voivodeship }}, {{ object.address }} +{{ object.practice_distance }}km </h5>
+                    <h5>
+                        {% if object.new_voivodeship.name %}
+                            {{ object.new_voivodeship.name }},
+                        {% endif %}
+                        {{ object.address }} +{{ object.practice_distance }}km
+                    </h5>
                     Region
                 </div>
                 <div class="card-text col-md-12">
