--- a/marketplace/templates/marketplace/announcement_player_for_club.html
+++ b/marketplace/templates/marketplace/announcement_player_for_club.html
@@ -45,11 +45,15 @@
                 </div>
 
                 <div class="col-6 col-md-3 text-center">
-                    {% if not player.profile.voivodeship and not player.profile.address %}
+                    {% if not player.profile.new_voivodeship.name and not player.profile.address %}
                     <h5>-</h5>
                     {% else %}
-                    <h5> {{ object.voivodeship }},
-                        {{ object.address }} +{{ object.practice_distance }}km </h5>
+                        <h5>
+                        {% if object.new_voivodeship.name %}
+                            {{ object.new_voivodeship.name }},
+                        {% endif %}
+                            {{ object.address }} +{{ object.practice_distance }}km
+                        </h5>
                     {% endif %}
                     Region
                 </div>
