--- a/marketplace/templates/marketplace/announcement_club_for_player.html
+++ b/marketplace/templates/marketplace/announcement_club_for_player.html
@@ -33,9 +33,7 @@
 
                 <div class="col-6 col-md-3 text-center">
                     <h5>
-                        {% if object.new_voivodeship.name %}
-                            {{ object.new_voivodeship.name }},
-                        {% endif %}
+                        {{ object|display_voivodeship }}
                         {{ object.address }}
                     </h5>
                     Region
