--- a/marketplace/templates/marketplace/announcement_player_for_club.html
+++ b/marketplace/templates/marketplace/announcement_player_for_club.html
@@ -49,9 +49,7 @@
                     <h5>-</h5>
                     {% else %}
                         <h5>
-                        {% if object.new_voivodeship.name %}
-                            {{ object.new_voivodeship.name }},
-                        {% endif %}
+                            {{ object|display_voivodeship }}
                             {{ object.address }} +{{ object.practice_distance }}km
                         </h5>
                     {% endif %}
